// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Charts /> should render properly for "Facet" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartFacet
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "facet",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Histogram" 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-4 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-10 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-10:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-11 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-12 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-13 {
  padding: 4px;
}

.emotion-14 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-14::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-14::-moz-placeholder {
  font-style: italic;
}

.emotion-14:-ms-input-placeholder {
  font-style: italic;
}

.emotion-14::placeholder {
  font-style: italic;
}

.emotion-14:hover {
  border: 1px solid #808080;
}

.emotion-14:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-15 {
  padding: 8px;
}

.emotion-16 {
  height: 16px;
}

.emotion-17 {
  padding-top: 8px;
}

.emotion-18 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-19 {
  position: relative;
}

.emotion-20 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-20:focus,
.emotion-20 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-20:hover,
.emotion-20 .noop {
  border: 2px solid #ffffff;
}

.emotion-21 {
  padding-top: 8px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-23 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23,
.emotion-23:hover,
.emotion-23:visited,
.emotion-23 .noop {
  background-color: #808080;
}

.emotion-23:hover,
.emotion-23 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-23[aria-disabled=true],
.emotion-23 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-24 {
  width: 8px;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-25,
.emotion-25:hover,
.emotion-25:visited,
.emotion-25 .noop {
  background-color: #3A5DFF;
}

.emotion-25:hover,
.emotion-25 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-25[aria-disabled=true],
.emotion-25 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <div
        className="emotion-0"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <form
              action=""
              className="emotion-3"
              method="post"
              onSubmit={[Function]}
            >
              <h2
                className="emotion-4"
              >
                Histogram
                 Visualization
              </h2>
              <div
                className="emotion-5"
              />
              <label
                className="emotion-6"
              >
                <div
                  className="emotion-7"
                >
                  Metadata Type
                </div>
                <ListboxInput
                  className="emotion-8"
                  defaultValue=""
                  onChange={[Function]}
                >
                  <ListboxButton
                    arrow={
                      <Unknown
                        color="#ffffff"
                        height={20}
                      />
                    }
                    className="emotion-9"
                  >
                    Select Type
                  </ListboxButton>
                  <ListboxPopover
                    className="emotion-10"
                  >
                    <div
                      className="emotion-11"
                    >
                      <div
                        className="emotion-12"
                      >
                        <div
                          className="emotion-13"
                        >
                          <input
                            aria-label="Filter Types"
                            className="emotion-14"
                            onChange={[Function]}
                            placeholder="Filter types"
                            type="search"
                            value=""
                          />
                        </div>
                        <div
                          className="emotion-15"
                        >
                          No Results
                        </div>
                      </div>
                    </div>
                  </ListboxPopover>
                </ListboxInput>
              </label>
              <div
                className="emotion-16"
              />
              <div
                className="emotion-17"
              >
                <label
                  className="emotion-18"
                  htmlFor="values"
                >
                  Number of Values Shown
                </label>
                <div
                  className="emotion-19"
                >
                  <input
                    className="emotion-20"
                    disabled={false}
                    id="values"
                    name="values"
                    onChange={[Function]}
                    type="number"
                    value="10"
                  />
                </div>
                <div
                  className="emotion-21"
                >
                   
                </div>
              </div>
              <div
                className="emotion-22"
              >
                <button
                  className="emotion-23"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <div
                  className="emotion-24"
                />
                <button
                  aria-disabled={true}
                  className="emotion-25"
                  onClick={[Function]}
                  type="submit"
                >
                  Save Visualization
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Range" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartRange
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "range",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Unknown" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  />
</div>
`;
